[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/Ladron.gd" type="Script" id=1]
[ext_resource path="res://assets/Images/Ladron/LadronSprite.png" type="Texture" id=2]

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 100, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 200, 0, 100, 100 )

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "walk",
"speed": 3.0
} ]

[sub_resource type="CapsuleShape2D" id=14]
radius = 15.0
height = 42.0

[sub_resource type="CapsuleShape2D" id=15]
radius = 30.0
height = 36.0

[node name="Ladron" type="Node2D"]
position = Vector2( 506, 279 )

[node name="Ladron" type="KinematicBody2D" parent="."]
position = Vector2( 6, 3 )
collision_layer = 4
collision_mask = 0
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Ladron"]
frames = SubResource( 13 )
animation = "walk"
playing = true

[node name="FloorDetection" type="RayCast2D" parent="Ladron/AnimatedSprite"]
position = Vector2( -22, 1 )
enabled = true
cast_to = Vector2( 0, 35 )
collision_mask = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ladron"]
position = Vector2( -3, -1 )
shape = SubResource( 14 )

[node name="LeftRay" type="RayCast2D" parent="Ladron"]
position = Vector2( -6, 0 )
enabled = true
cast_to = Vector2( -20, 0 )
collision_mask = 7

[node name="RightRay" type="RayCast2D" parent="Ladron"]
position = Vector2( 2, -1 )
enabled = true
cast_to = Vector2( 20, 0 )
collision_mask = 7

[node name="AreaLadron" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaLadron"]
position = Vector2( 2, 3 )
shape = SubResource( 15 )

[connection signal="area_entered" from="AreaLadron" to="Ladron" method="_on_AreaLadron_area_entered"]
